--- a/API/API.csproj
+++ b/API/API.csproj
@@ -4,8 +4,14 @@
   </PropertyGroup>
   <ItemGroup>  
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Dtos\" />
+    <Folder Include="Helpers\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 </Project>
