--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,12 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data source=skinet.db"
-  }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data source=skinet.db"
+    },
+    "ApiUrl": "https://localhost:5001/"
 }
